# sanman

./: .gitignore  .replit  Dockerfile  README.md  Spacefile  app.py  db.sqlite3  json_api.py  ly.css  ly.html  main.py  models.py  newapp.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  sync.sh  tailwind.config.js  utils.py  workbox-config.js
.cache/pypoetry/artifacts/14/34/9a/633ef3af949bf04bd60277a9882b1dc0e651fe667e56cf0c62743138e2/: spitfire3-0.2.3-py2.py3-none-any.whl
.cache/pypoetry/artifacts/18/30/4c/db8d50cc7bce502d2a0b533da9bf85102dda500a8cf4af6120cbb413e7/: syncedlyrics-0.7.0-py3-none-any.whl
.cache/replit/modules/: python-3.10:v58-20240322-590b495.res
.upm/: store.json
app/: main.py  requirements.txt  tailwind.config.js
app/static/controllers/: player.js
app/static/js/: activity.js  lyricsloader.js  main.js  music_controls.js  state.js
app/static/styles/: lyr.css
app/templates/: _1base.spf  album.spf  lyrics.spf  playlist.spf
static/: activity.js  index.html  lyricsloader.js  manifest.json  navigation.js  share.js  shared.html  signup.html  sw.js  sw.js.map  tailwind.css  twa-manifest.json  workbox-c3becd34.js  workbox-c3becd34.js.map
static/html/: index.html  login.html
static/js/: lyr.js  main.js  music_controls.js  navigation.js  share.js  state.js
static/styles/: lyr.css  tailwind.css
templates/: _1base.spf  _404.spf  album.spf  ample.spf  artist.spf  lyrics.spf  playlist.spf  search.spf  search_result.spf  song.spf
(+6 files in other folders)
